02_code1/grade.txt
Grading at Sun Jul 12 22:37:21 UTC 2020
Checking code1.c for legal syntax
temp.c: In function ‘max’:
temp.c:12:7: error: expected ‘;’ before ‘}’ token
       }
       ^
The code did not have legal syntax!

Overall Grade: F
